Moved badges into their own components. Fixed badges not showing correctly

--- a/src/Modals/GameInfo/Style.scss
+++ b/src/Modals/GameInfo/Style.scss
@@ -11,7 +11,6 @@
         user-select: none;
         z-index: 0;
         .badge{
-            visibility: hidden;
             position: absolute;
             top:-8px;
             left: 90%;
